--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Piedra, papel, tijera</title>
 </head>
 <body>
+  <p>prueba de vinculación con git</p>
   <button class="boton-jugada" data-jugada="piedra">Piedra</button>
   <button class="boton-jugada" data-jugada="papel">Papel</button>
   <button class="boton-jugada" data-jugada="tijera">Tijera</button>
